[gd_scene load_steps=12 format=3 uid="uid://bhuwtv3rysx8d"]

[ext_resource type="Script" uid="uid://sgrrjc7idout" path="res://menu/shaders/IGM.gd" id="1_1m0wi"]
[ext_resource type="Shader" uid="uid://nke4lrv0b6jy" path="res://menu/shaders/circleshadow.gdshader" id="2_nossb"]
[ext_resource type="Script" uid="uid://bk2ptiby6yifv" path="res://menu/shaders/shadowShader.gd" id="3_p11o5"]
[ext_resource type="Shader" uid="uid://ib4f3kunlqtx" path="res://menu/shaders/start.gdshader" id="5_4qf1y"]
[ext_resource type="Texture2D" uid="uid://3dd4hkuowy5l" path="res://menu/icon_holder.png" id="6_6e1wd"]
[ext_resource type="Script" uid="uid://cvgmlybgvit8t" path="res://menu/shaders/ShadowOnStart.gd" id="6_omh7p"]
[ext_resource type="PackedScene" uid="uid://gbqfb5ul7yb1" path="res://menu/bones/tscns/corner_2.tscn" id="7_mjuek"]
[ext_resource type="PackedScene" uid="uid://b3ev78gogsajf" path="res://menu/bones/tscns/line.tscn" id="8_0pe8h"]
[ext_resource type="PackedScene" uid="uid://c1tlh4dlsnv4e" path="res://menu/bones/tscns/ornament.tscn" id="9_prya4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f3bsw"]
shader = ExtResource("2_nossb")
shader_parameter/value = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nult5"]
shader = ExtResource("5_4qf1y")
shader_parameter/value = 1.0

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("1_1m0wi")

[node name="CircleShadow" type="ColorRect" parent="."]
unique_name_in_owner = true
light_mask = 2
visibility_layer = 2
material = SubResource("ShaderMaterial_f3bsw")
layout_mode = 0
script = ExtResource("3_p11o5")

[node name="Menu" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(585, 298)

[node name="Corner2" parent="Menu" instance=ExtResource("7_mjuek")]

[node name="Line" parent="Menu" instance=ExtResource("8_0pe8h")]

[node name="Ornament_anchor" parent="Menu/Line" instance=ExtResource("9_prya4")]

[node name="ShadowOnStart" type="ColorRect" parent="."]
light_mask = 2
visibility_layer = 2
material = SubResource("ShaderMaterial_nult5")
layout_mode = 0
offset_right = 124.0
offset_bottom = 206.0
script = ExtResource("6_omh7p")

[node name="IconHolder" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(335, 326)
texture = ExtResource("6_6e1wd")
